2019-07-16  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* src/anytime.cpp (r_stringToTime): Skip tz argument, change
	internal conversion logic and reflect optional asDate argument

	* inst/tinytest/test_r_format.R: Skip for now
	* inst/tinytest/test_bulk.R (fullPOSIXctEx): Set TZ once

2019-07-14  Dirk Eddelbuettel  <edd@debian.org>

	* R/anytime.R: Add a paragraph warning about possibly issue on
	Windows due to Boost ignoring TZ (but using the tzutil program)

	* tests/tinytest.R: Call as utils::packageVersions()
        * inst/tinytest/test_all_formats.R: Idem
        * inst/tinytest/test_bulk.R: Idem
        * inst/tinytest/test_gh_issue_5.R: Idem
        * inst/tinytest/test_utilities.R: Idem
        * inst/tinytest/test_validate.R: Idem

2019-07-08  Dirk Eddelbuettel  <edd@debian.org>

	* src/anytime.cpp (ptToDouble): Another debug message

2019-07-05  Dirk Eddelbuettel  <edd@debian.org>

        * .travis.yml (install): Use r-cran-tinytest from PPA

2019-06-27  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

2019-06-26  Christoph Sax  <christoph.sax@gmail.com>

	* src/anytime.cpp: Correct use via Rcpp::Function imported
	Sys.setenv on Windows
	* R/anytime.R: Use all argument to anytime_cpp()

	* inst/tinytest/test_gh_issue_56.R: Relax Windows test constraint
	* inst/tinytest/test_gh_issue_84.R: Idem
	* inst/tinytest/test_simple.R: Idem
	* inst/tinytest/test_utilities.R: Idem

2019-06-23  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* inst/tinytest/test_all_formats.R: Add three tests to complete
	coverage

	* src/anytime.cpp (convertToTime): Some #nocov attributes

2019-06-18  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.3.4

2019-06-17  Dirk Eddelbuettel  <edd@debian.org>

	* inst/tinytest/test_all_formats.R: Do not run test for releases
	* inst/tinytest/test_bulk.R: Idem