@@ -89,8 +89,12 @@ if (!isSolaris && !isWindows && !isRelease) {
 
     #cat("Next call will tickle exception\n")
     expect_error(anytime(TRUE))		# tickles unsupported type -- and exception, hence try()
+
 }
 
 expect_true(inherits(anytime(as.POSIXlt(Sys.time())), "POSIXt"))
 expect_true(inherits(anytime(Sys.Date()), "POSIXt"))
 expect_equal(class(utcdate(Sys.Date())), "Date")
+
+expect_equivalent(anydate("1970-01-01 00:00:00", useR=TRUE), anydate(0))
+expect_equal(anytime:::format(anytime("1970-01-01 00:00:00")), "1970-01-01 00:00:00.000000")
