@@ -165,10 +165,7 @@ double ptToDouble(const bt::ptime & pt, const bool asDate=false) {
 
     // seconds sincr epoch (in local time) -- misses DST adjustment
     bt::time_duration tdiff = pt - local_timet_start;
-    if (debug) {
-        Rcpp::Rcout << "tdiff in sec is " << tdiff.total_seconds()
-                    << " and pt is " << pt << std::endl;
-    }
+    if (debug) Rcpp::Rcout << "tdiff in sec is " << tdiff.total_seconds() << " and pt is " << pt << std::endl;
 
     if (asDate) {
         if (debug) Rcpp::Rcout << "days " << pt.date().day_number() - timet_start.date().day_number() << std::endl;
@@ -228,14 +225,14 @@ double stringToTime(const std::string s, const bool asUTC=false, const bool asDa
 
     if (pt == ptbase) return NA_REAL; // NA for non-parsed dates
 
-    if (debug) {
+    if (debug) {                // #nocov start
         int utc = static_cast<int>(ptToDoubleUTC(pt));
         int loc = static_cast<int>(ptToDouble(pt));
         Rcpp::Rcout << "Boost parsed as " << pt
                     << " which is UTC " << utc
                     << " local " << loc
                     << " diff " << utc-loc << std::endl;
-    }
+    } 				// #nocov end
     if (asUTC) {
         return ptToDoubleUTC(pt, asDate);
     } else {
