@@ -1,3 +1,8 @@
+2019-07-17  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/anytime.cpp: A few minor #nocov additions
+	* inst/tinytest/test_all_formats.R: Add test for anydate with useR
+
 2019-07-16  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Roll minor version
